Avoid Asciidoctor warning